fixing some layout issues

--- a/src/app/components/Card/Card.module.css
+++ b/src/app/components/Card/Card.module.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr ;
+    grid-gap: 5px;
     padding: 14px 20px 18px 20px;
     flex-direction: column;
     align-items: flex-start;
@@ -32,7 +33,7 @@
 .card__time__item {
     font-size: 36px;
     font-style: normal;
-    margin-right: 5px;
+    margin-right: 8px;
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.41px;
@@ -79,5 +80,5 @@
     line-height: normal;
     letter-spacing: -0.08px;
     display: flex;
-
+    margin-right: 28px;
 }
